--- a/src/main/resources/templates/pizze/list.html
+++ b/src/main/resources/templates/pizze/list.html
@@ -13,19 +13,22 @@
 
 <div class="container">
     <h1>List</h1>
-    <table class="table table-striped">
+    <table class="table table-striped table-warning">
         <thead th:if="${pizza.size() >0}">
         <tr>
             <th>Name</th>
             <th>Description</th>
             <th>Price</th>
+            <th>Link</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="pizze : ${pizza}">
             <td th:text="${pizze.name}"></td>
             <td th:text="${pizze.description}"></td>
-            <td th:text="${pizze.price}"></td>
+            <td>€ <span th:text="${pizze.price}"></span></td>
+            <!-- td con il link -->
+            <td><a th:href="@{/pizza/show/{id} (id=${pizze.id})}" class="btn btn-danger">Detail</a></td>
         </tr>
         </tbody>
     </table>
