--- a/src/main/resources/templates/pizze/list.html
+++ b/src/main/resources/templates/pizze/list.html
@@ -13,6 +13,7 @@
 
 <div class="container">
     <h1>List</h1>
+    <a th:href="@{/pizza/create}" class="btn btn-primary mb-3">Add Pizza</a>
     <table class="table table-striped table-warning">
         <thead th:if="${pizza.size() >0}">
         <tr>
