--- a/src/main/resources/templates/pizze/detail.html
+++ b/src/main/resources/templates/pizze/detail.html
@@ -10,7 +10,7 @@
     <title>Pizza Detail</title>
 </head>
 <body>
-<div class="container">
+<div class="container mt-3">
     <h1>Pizza: <span th:text="${pizze.name}"></span></h1>
     <h2>Descrizione: <span th:text="${pizze.description}"></span></h2>
     <h2> Prezzo: € <span th:text="${pizze.price}"></span></h2>
