--- a/src/main/resources/templates/pizze/list.html
+++ b/src/main/resources/templates/pizze/list.html
@@ -16,8 +16,19 @@
 <body>
 
 <div class="container">
-    <h1>List</h1>
+    <h1>Pizza List</h1>
+    <hr>
+    <!-- barra di ricerca -->
+    <form th:action="@{/pizza}" method="get">
+        <div class="input-group mb-3">
+            <input type="search" class="form-control" placeholder="Search by Name or Description" name="keyword"
+                   th:value="${keyword}">
+            <button class="btn btn-primary">Search</button>
+        </div>
+    </form>
+    <!-- button per aggiungere una pizza -->
     <a th:href="@{/pizza/create}" class="btn btn-primary mb-3">Add Pizza</a>
+    <!-- tabella contenente la lista delle pizze -->
     <table class="table table-striped table-warning">
         <thead th:if="${pizza.size() >0}">
         <tr>
